--- a/hawk/templates/hawk/trainning.html
+++ b/hawk/templates/hawk/trainning.html
@@ -1,5 +1,101 @@
 {% extends 'index.html' %}
 
 {% block content %}
-<h1>trianing set</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        .training {
+            text-align: center;
+            padding: 3%;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #fff;
+        }
+
+        .training-container {
+            width: 80%;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+        }
+
+        .program {
+            display: flex;
+            align-items: center;
+            margin: 20px 0;
+        }
+
+        .program img {
+            width: 350px;
+            height: 180px;
+            object-fit: cover;
+            margin-right: 20px;
+            border-radius: px;
+        }
+
+        .program-details {
+            max-width: 600px;
+        }
+
+        .program-details h2 {
+            margin: 0 0 10px;
+            color: #FF204E;
+        }
+
+        .program-details p {
+            margin: 0;
+            color: #00224D;
+            font-weight: 600;
+        }
+
+        .sess {
+            text-decoration: none;
+        }
+    </style>
+</head>
+
+<body>
+
+    <h1 class="training"> OUR TRAINING SESSIONS</h1>
+
+    {% for trainn in train %}
+
+    <!-- <div class="sessions">
+        <table>
+            <tr>
+                <th><a class="sess-title" href="/">{{ trainn.title }}</a></th>
+                <th><a href="/"><img class="session-img" src="{{ trainn.photo.url }}" alt=""></a></th>
+            </tr>
+        </table>
+    </div> 
+    <div class="sessions" style="background-image: url('{{ trainn.photo.url }}')">
+
+    </div>-->
+
+    <div class="training-container">
+        <!-- <h1>Our Training Programs</h1> -->
+        <div class="program">
+            <a href="#"><img src="{{ trainn.photo.url }}" alt="Athletics"></a>
+            <div class="program-details">
+                <a class="sess" href="#">
+                    <h2>{{ trainn.title }}</h2>
+                </a>
+                <a class="sess" href="#">
+                    <p>{{ trainn.description }}</p>
+                </a>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+</body>
+
+</html>
 {% endblock content %}
