--- a/hawk/templates/hawk/trainning.html
+++ b/hawk/templates/hawk/trainning.html
@@ -91,6 +91,9 @@
                 <a class="sess" href="#">
                     <p>{{ trainn.description }}</p>
                 </a>
+                <a class="member" href="{% url 'member' %}">
+                    <p>Register here, to join us!</p>
+                </a>
             </div>
         </div>
     </div>
